# Taiko-Preconf-AVS

./: .dockerignore  .env.sample  .gitignore  .gitmodules  CODEOWNER  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile_cache  LICENSE.md  README.md  _typos.toml  avs-deploy  deny.toml  rust-toolchain.toml
Node/: .env.sample  Cargo.toml  build.rs
Node/integration/mev-boost-mock/: Dockerfile  build.sh  call.sh  constraints.go  go.mod  go.sum  main.go  proofs.go  transaction_ssz.go  utils.go
Node/libsigner/: libsigner.h
Node/src/: main.rs
Node/src/bls/: mod.rs
Node/src/crypto/: kzg.rs  mod.rs
Node/src/ethereum_l1/: avs_contract_error.rs  beacon_node.rs  block_proposed.rs  config.rs  consensus_layer.rs  el_with_cl_tests.rs  execution_layer.rs  l1_contracts_bindings.rs  merkle_proofs.rs  mod.rs  monitor_transaction.rs  propose_batch_builder.rs  registration.rs  slot_clock.rs  ssz_serializer.rs  transaction_error.rs  validator.rs  ws_provider.rs
Node/src/ethereum_l1/abi/: AVSDirectory.json  PreconfRegistry.json  PreconfRouter.json  PreconfTaskManager.json  Slasher.json  StrategyManager.json  TaikoEvents.json
Node/src/metrics/: mod.rs
Node/src/mev_boost/: constraints.rs  mod.rs  tests.rs
Node/src/node/: batch_builder.rs  batch_proposer.rs  block.rs  block_porposer.rs  block_porposer_helper.rs  block_proposed_receiver.rs  commit.rs  l2_block_id.rs  lookahead_monitor.rs  lookahead_updated_receiver.rs  mod.rs  operator.rs  preconfirmation_helper.rs  preconfirmation_message.rs  preconfirmation_proof.rs  verifier.rs
Node/src/node/batch_manager/: batch_builder.rs  mod.rs
Node/src/p2p_network/: discovery.rs  enr.rs  mod.rs  peer_manager.rs
Node/src/registration/: mod.rs  tests.rs
Node/src/reorg_detector/: batch_proposed.rs  batch_proposed_receiver.rs  l2_block_receiver.rs  mod.rs
Node/src/shared/: l2_block.rs  l2_tx_lists.rs  mod.rs
Node/src/taiko/: fixed_k_signer_chainbound.rs  l2_contracts_bindings.rs  l2_tx_lists.rs  mod.rs  preconf_blocks.rs  taiko_blob.rs  taiko_blob_coder.rs
Node/src/taiko/abi/: TaikoAnchor.json
Node/src/test_gas/: mod.rs
Node/src/utils/: block.rs  block_proposed.rs  bytes_tools.rs  commit.rs  config.rs  file_lock.rs  file_operations.rs  mod.rs  node_message.rs  preconfirmation_message.rs  preconfirmation_proof.rs  rpc_client.rs  rpc_server.rs  state_file.rs  tx_lists_test_response.json  tx_lists_test_response_from_geth.json  types.rs
catalyst-urc/: Cargo.toml
catalyst-urc/src/: main.rs
catalyst-urc/src/l1/: bindings.rs  execution_layer.rs  mod.rs
catalyst-urc/src/l1/abi/: IRegistry.json
catalyst-urc/src/registration/: registry.rs
catalyst-urc/src/utils/: config.rs
catalyst-whitelist/: Cargo.toml
catalyst-whitelist/src/: main.rs
catalyst-whitelist/src/l1/: execution_layer.rs
catalyst-whitelist/src/utils/: config.rs
common/: Cargo.toml
common/src/ethereum_l1/: config.rs  execution_layer.rs  execution_layer_inner.rs  extension.rs  lookahead_test_response.json  mod.rs
common/src/ethereum_l1/abi/: PreconfRouter.json  TaikoWrapper.json
common/src/node/: blob_parser.rs  operator.rs
common/src/node/batch_manager/: config.rs
common/src/shared/: mod.rs
common/src/taiko/: l2_execution_layer.rs
common/src/utils/: config_trait.rs  logging.rs
node/: .env.sample  Cargo.toml  README.md
node/src/: main.rs
node/src/chain_monitor/: batch_proposed_receiver.rs  l2_block_receiver.rs  mod.rs
node/src/ethereum_l1/: block_proposed.rs  config.rs  consensus_layer.rs  el_with_cl_tests.rs  execution_layer.rs  l1_contracts_bindings.rs  mod.rs  monitor_transaction.rs  propose_batch_builder.rs  slot_clock.rs  tools.rs  transaction_error.rs  transaction_result.rs  ws_provider.rs
node/src/ethereum_l1/abi/: ForcedInclusionStore.json  IForcedInclusionStore.json  ITaikoInbox.json  PreconfRegistry.json  PreconfWhitelist.json  TaikoWrapper.json
node/src/forced_inclusion/: mod.rs
node/src/forced_inclusion_monitor/: forced_inclusion_data.rs  mod.rs
node/src/funds_monitor/: mod.rs
node/src/metrics/: mod.rs  server.rs
node/src/node/: blob_parser.rs  mod.rs  operator.rs  preconfirmation_proof.rs  verifier.rs
node/src/node/batch_manager/: batch.rs  batch_builder.rs  config.rs  mod.rs
node/src/registration/: registry.rs
node/src/reorg_detector/: batch_proposed.rs  mod.rs
node/src/shared/: alloy_tools.rs  l2_block.rs  l2_slot_info.rs  l2_tx_lists.rs  mod.rs  signer.rs  web3signer.rs  ws_provider.rs
node/src/taiko/: config.rs  fixed_k_signer_chainbound.rs  l2_contracts_bindings.rs  l2_execution_layer.rs  l2_tx_lists.rs  mod.rs  operation_type.rs  preconf_blocks.rs  taiko_blob.rs  taiko_blob_coder.rs
node/src/taiko/abi/: IBridge.json
node/src/taiko/blob/: mod.rs  taiko_blob_coder.rs  taiko_blob_decoder.rs
node/src/test_gas/: mod.rs
node/src/urc/: main.rs  remove_mod.rs
node/src/urc/l1/: execution_layer.rs  mod.rs
node/src/urc/registration/: registry.rs
node/src/utils/: bytes_tools.rs  config.rs  event_listener.rs  file_operations.rs  mod.rs  operation_type.rs  retry.rs  rpc_client.rs  rpc_server.rs  types.rs
node/src/whitelist/: main.rs
p2pNode/p2pBootNode/: Cargo.toml  Dockerfile
p2pNode/p2pBootNode/src/: main.rs
p2pNode/p2pIntegrationTest/: Cargo.toml
p2pNode/p2pIntegrationTest/src/: main.rs
p2pNode/p2pNetwork/: Cargo.toml
p2pNode/p2pNetwork/src/: discovery.rs  enr.rs  network.rs  peer_manager.rs
p2pNode/p2pNetwork/tests/: test.rs
p2p_node/p2pIntegrationTest/: Cargo.toml
p2p_node/p2pIntegrationTest/src/: main.rs
p2p_node/p2p_boot_node/: Cargo.toml
p2p_node/p2p_network/: Cargo.toml
p2p_node/p2p_network/src/: discovery.rs  network.rs  peer_manager.rs
tools/p2p_node/p2p_boot_node/: Cargo.toml  Dockerfile
tools/p2p_node/p2p_network/: Cargo.toml
tools/p2p_node/p2p_test_node/: Cargo.toml
urc/: Cargo.toml
urc/src/: main.rs
urc/src/l1/: execution_layer.rs
urc/src/registration/: registry.rs
urc/src/utils/: config.rs
whitelist/: Cargo.toml
whitelist/src/: main.rs
whitelist/src/l1/: execution_layer.rs
whitelist/src/utils/: config.rs
(+152 files in other folders)
