
[workspace]
members = [
    "node",
    "p2p_node/p2pIntegrationTest",
    "p2p_node/p2p_boot_node",
    "p2p_node/p2p_network",
]
resolver = "2"
default-members = ["node"]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NethermindEth/Taiko-Preconf-AVS"
license = "MIT"

[workspace.dependencies]
alloy = { version = "0.2", default-features = false, features = [
    "std",
    "consensus",
    "contract",
    "network",
    "node-bindings",
    "provider-ws",
    "pubsub",
    "rlp",
    "rpc-types-beacon",
    "signers",
    "signer-local",
] }
alloy-json-rpc = { version = "0.2", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
anyhow = { version = "1", default-features = false }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", package = "beacon-api-client", rev = "8fbd8a53dca0170bedeca40a92ee70fd48c4615b", default-features = false, features = ["cli", "native-tls"] }
bincode = { version = "1.3", default-features = false }
blst = { version = "0.3", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions"] }
discv5 = { version = "0.6.0", default-features = false, features = ["libp2p"] }
dotenv = { version = "0.15", default-features = false }
ecdsa = { version = "0.16", default-features = false }
elliptic-curve = { version = "0.13", default-features = false }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", package = "ethereum-consensus", rev = "8fbd8a53dca0170bedeca40a92ee70fd48c4615b", default-features = false, features = ["serde", "async"] }
futures = { version = "0.3.25", default-features = false }
futures-util = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false }
http = { version = "1.2", default-features = false }
jsonrpsee = { version = "0.24", default-features = false, features = ["http-client", "server"] }
jsonwebtoken = { version = "9.3", default-features = false }
k256 = { version = "0.13", default-features = false }
lazy_static = { version = "1.4", default-features = false }
libp2p = { version = "0.54.0", default-features = false, features = ["full", "tcp", "dns", "websocket", "tokio", "identify", "yamux", "noise", "gossipsub"] }
libp2p-mplex = { version = "0.41", default-features = false }
mockall = { version = "0.13", default-features = false }
mockall_double = { version = "0.3", default-features = false }
mockito = { version = "1.4", default-features = false }
p2p-network = { path = "p2p_node/p2p_network", default-features = false }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
reqwest = { version = "0.12", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "5dd5555c5c7d8e43420e273e7005b8af63a847a5", default-features = false }
secp256k1 = { version = "0.30", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_millis = { version = "0.1.1", default-features = false }
tiny-keccak = { version = "2.0", default-features = false }
tokio = { version = "1.38", default-features = false, features = ["full"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
tree_hash = { version = "0.6.0", default-features = false }
tree_hash_derive = { version = "0.6.0", default-features = false }
void = { version = "1.0.2", default-features = false }

[workspace.lints.rust]
# TODO document public api
# https://github.com/NethermindEth/Taiko-Preconf-AVS/issues/426
#missing_docs = "deny"
# TODO sol! macros use unsafe - check after the alloy update
# https://github.com/NethermindEth/Taiko-Preconf-AVS/issues/425
#unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

# TODO: remove when the bug is fixed (https://github.com/ralexstokes/ssz-rs/issues/163)
[patch."https://github.com/ralexstokes/ssz-rs"]
ssz_rs = { git = "https://github.com/noahfigueras/ssz-rs", branch = "partial_merkle_tree" }

[patch.crates-io]
zstd-sys = { git = "https://github.com/gyscos/zstd-rs", tag = "zstd-sys-2.0.9" }
