[package]
name = "taiko_preconf_avs_node"
version = "0.2.66"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.12", features = [
    "full",
    "node-bindings",
    "rlp",
    "rpc-types-beacon",
    "rpc-types",
] }
alloy-rlp = "0.3"
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonrpsee = { version = "0.24", features = ["http-client", "server"] }
jsonwebtoken = "9.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
anyhow = "1.0.86"
k256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = "0.16"
elliptic-curve = "0.13"
reqwest = "0.12"
hex = "0.4"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", package = "ethereum-consensus", rev = "8fbd8a53dca0170bedeca40a92ee70fd48c4615b" }
dotenv = "0.15"
chrono = "0.4"
futures-util = "0.3"
http = "1.2"
flate2 = "1.1"
alloy-json-rpc = "0.12"
prometheus = "0.14"
warp = "0.3"
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
mockito = "1.4"

[features]
default = ["extra-gas-percentage"]
extra-gas-percentage = []
test-gas = ["clap"]
sync-on-warmup = []
