[package]
name = "taiko_preconf_avs_node"
version = "0.2.2"
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true }
alloy-rlp = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonrpsee = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
k256 = { workspace = true }
ecdsa = { workspace = true }
elliptic-curve = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
tiny-keccak = { workspace = true }
secp256k1 = { workspace = true }
beacon-api-client = { workspace = true }
ethereum-consensus = { workspace = true }
ssz_rs = { workspace = true }
dotenv = { workspace = true }
rand_core = { workspace = true }
chrono = { workspace = true }
p2p-network = { workspace = true }
bincode = { workspace = true }
serde_bytes = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
reth-primitives = { workspace = true }
blst = { workspace = true }
http = { workspace = true }

[dev-dependencies]
mockall_double = "0.3"
mockall = "0.13"
mockito = "1.4"
alloy-json-rpc = "0.2"

[features]
use_mock = []


