[package]
name = "taiko_preconf_avs_node"
version = "0.2.2"
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
use_mock = []

[dependencies]
alloy = { workspace = true }
alloy-rlp = { workspace = true }
anyhow = { workspace = true }
beacon-api-client = { workspace = true }
bincode = { workspace = true }
blst = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
ecdsa = { workspace = true }
elliptic-curve = { workspace = true }
ethereum-consensus = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
jsonrpsee = { workspace = true }
jsonwebtoken = { workspace = true }
k256 = { workspace = true }
lazy_static = { workspace = true }
p2p-network = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
reth-primitives = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
ssz_rs = { workspace = true }
tiny-keccak = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }

[dev-dependencies]
alloy-json-rpc = { workspace = true }
mockall = { workspace = true }
mockall_double = { workspace = true }
mockito = { workspace = true }

#[lints]
#workspace = true


