[package]
name = "p2p-boot-node"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
tokio = { workspace = true }
discv5 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonrpc-http-server = { workspace = true }
jsonrpc-core = { workspace = true }