[package]
name = "p2p-node"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
p2p-network = { workspace = true }
rand = { workspace = true }
jsonrpc-client-transports = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }
serde_json = { workspace = true }
