[package]
name = "p2p-boot-node"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

#[lints]
#workspace = true

[dependencies]
tokio = { workspace = true }
discv5 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }