[package]
name = "p2p-network"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

#[lints]
#workspace = true

[dependencies]
anyhow = { workspace = true }
discv5 = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
libp2p-mplex = { workspace = true }
serde = { workspace = true }
serde_millis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
void = { workspace = true }
