[package]
name = "p2p-node"
version.workspace = true
publish = false
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
jsonrpsee = { workspace = true }
p2p-network = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
